<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="@dimen/dimen_16">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBrand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:hint="@string/brand"
            android:textColorHint="@color/grayText"
            app:boxStrokeErrorColor="@color/errorColor"
            app:errorIconTint="@color/errorColor"
            app:errorTextColor="@color/errorColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldBrand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/questrial"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilModel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:hint="@string/model"
            android:textColorHint="@color/grayText"
            app:boxStrokeErrorColor="@color/errorColor"
            app:errorIconTint="@color/errorColor"
            app:errorTextColor="@color/errorColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilBrand">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldModel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/questrial"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCarPlate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:hint="@string/car_plate"
            android:textColorHint="@color/grayText"
            app:boxStrokeErrorColor="@color/errorColor"
            app:errorIconTint="@color/errorColor"
            app:errorTextColor="@color/errorColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilModel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldCarPlate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/questrial"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:hint="@string/color"
            android:textColorHint="@color/grayText"
            app:boxStrokeErrorColor="@color/errorColor"
            app:errorIconTint="@color/errorColor"
            app:errorTextColor="@color/errorColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilCarPlate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/questrial"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilOwner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:hint="@string/owner"
            android:textColorHint="@color/grayText"
            app:boxStrokeErrorColor="@color/errorColor"
            app:errorIconTint="@color/errorColor"
            app:errorTextColor="@color/errorColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldOwner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/questrial"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtSelectView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:fontFamily="@font/questrial"
            android:text="@string/select_view"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilOwner" />

        <include
            android:id="@+id/containerSides"
            layout="@layout/container_sides"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0"
            android:layout_marginTop="@dimen/dimen_4"
            app:layout_constraintBottom_toTopOf="@id/buttonSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtSelectView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginBottom="@dimen/dimen_24"
            android:backgroundTint="@color/primaryColor"
            android:fontFamily="@font/questrial"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonCancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSelectView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancel"
            style="@style/ButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:fontFamily="@font/questrial"
            android:text="@string/cancel"
            android:textColor="@color/primaryColor"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/buttonSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonSave"
            app:layout_constraintTop_toTopOf="@id/buttonSave" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>